main.tf
terraform {
  required_version = ">= 0.13.0"
}

provider "aws" {
  #version = ">= 2.28.1"
  region  = var.region
  profile = "xxx"
}

data "aws_eks_cluster" "cluster" {
  name = module.eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
  name = module.eks.cluster_id
}

data "aws_availability_zones" "available" {
}

resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.6.0"

  name                 = "demo-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                      = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
  }
}

module "eks" {
  source       = "terraform-aws-modules/eks/aws"
  cluster_name    = var.cluster_name
  cluster_version = "1.17"
  subnets         = module.vpc.private_subnets
  version = "12.2.0"
  cluster_create_timeout = "1h"
  cluster_endpoint_private_access = true 

  vpc_id = module.vpc.vpc_id

  worker_groups = [
    {
      name                          = "worker-group-1"
      instance_type                 = "t2.medium"
      additional_userdata           = "echo foo bar"
      asg_desired_capacity          = 1
      additional_security_group_ids = [aws_security_group.worker_group_mgmt_one.id]
    },
  ]

  worker_additional_security_group_ids = [aws_security_group.all_worker_mgmt.id]
  map_roles                            = var.map_roles
  map_users                            = var.map_users
  map_accounts                         = var.map_accounts
}



provider "kubernetes" {
  host                   = data.aws_eks_cluster.cluster.endpoint
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
  token                  = data.aws_eks_cluster_auth.cluster.token
  load_config_file       = false
  version                = "~> 1.11"
}


resource "kubernetes_deployment" "default" {
  metadata {
    name = "upday"
    labels = {
      test = "upday"
    }
  }

  spec {
    replicas = 2

    selector {
      match_labels = {
        test = "upday"
      }
    }
    

    template {
      metadata {
        labels = {
          test = "upday"
          name = "upday"
        }
      }

      spec {
        container {
          image = "barunavopal/upday:latest"
          name  = "upday"
          image_pull_policy = "Always"
          port  {
              name              = "http"
              container_port    = 8080
              protocol          = "TCP"
          }

          resources {
            limits {
              cpu    = "2.0"
              memory = "512Mi"
            }
            requests {
              cpu    = "800m"
              memory = "50Mi"
            }
          }
          liveness_probe {
            http_get {
              path = "/actuator/health" 
              port = 8080
            }
            failure_threshold     = 3
            initial_delay_seconds = 3
            period_seconds        = 10
            success_threshold     = 1
            timeout_seconds       = 2
          }
          readiness_probe {
            tcp_socket {
              port = 8080
            }
            failure_threshold     = 1
            initial_delay_seconds = 10
            period_seconds        = 10
            success_threshold     = 1
            timeout_seconds       = 2
        }
        }
      }
    }
  }
}

resource "kubernetes_service" "example" {
  metadata {
    name = "upday"
  }
  spec {
    selector = {
      test = "upday"
    }
    port {
      name        = "http"  
      port        = 8080
      target_port = 8080
      protocol    = "TCP"
    }

    type = "LoadBalancer"
  }
}

resource "kubernetes_horizontal_pod_autoscaler" "example" {
  metadata {
    name = "upday"
  }
  spec {
    max_replicas = 10
    min_replicas = 8

    scale_target_ref {
      kind = "Deployment"
      name = "upday"
    }
  }
}

resource "kubernetes_pod_disruption_budget" "example" {
  metadata {
    name = "upday"
  }
  spec {
    max_unavailable = "20%"
    selector {
      match_labels = {
        test = "upday"
      }
    }
  }
}
